<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:background="@color/color_black"
        tools:context=".MainActivity">
        <TableRow>
            <EditText
                android:id="@+id/get_text_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:gravity="right"
                android:textColor="@color/color_white"
                android:layout_span="4"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:layout_span="3"
                android:background="@color/color_grey"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />


            <Button
                android:id="@+id/button_devide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devide"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />


            <Button
                android:id="@+id/button_multiple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiple"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />


            <Button
                android:id="@+id/button_substract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/substract"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@drawable/changbackground"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />


            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="@dimen/fontSize"
                android:padding="@dimen/padding"
                android:background="@color/color_grey"
                android:textColor="@color/color_white"
                android:layout_margin="@dimen/margin"
                />
        </TableRow>

    </TableLayout>

</FrameLayout>
